--- a/index.htm
+++ b/index.htm
@@ -50,6 +50,8 @@
             <img src="" alt="#" id="img" />
             <svg xmlns="http://www.w3.org/2000/svg" version="1.2" baseProfile="tiny" id="svg"></svg>
         </div>
+        <div id="inscription"></div>
+        <div id="title"></div>
     </div>
 </div>
 
@@ -120,7 +122,6 @@
 
 <!-- Help block -->
 <div id="overlay"></div>
-<div id="inscription"></div>
 <div id="help">
     <span class="close_button" title="close"></span>
     <div class="txt">
