Add ones already done

--- a/index.htm
+++ b/index.htm
@@ -157,6 +157,8 @@
 </div>
 
 <script type="text/javascript" src="LinearAInscriptions.js"></script>
+<script type="text/javascript" src="word-coordinates-transcriptions.js"></script>
+<script type="text/javascript" src="summerHTMLImageMapCreator.js"></script>
 <script type="text/javascript" src="summerHTMLImageMapCreator.js"></script>
 </body>
 </html>
