Add error checking

--- a/index.htm
+++ b/index.htm
@@ -52,6 +52,8 @@
         </div>
         <div id="inscription"></div>
         <div id="title"></div>
+        <div id="target"></div>
+        <div id="rects"></div>
     </div>
 </div>
 
@@ -156,6 +158,7 @@
     </footer>
 </div>
 
+<script type="text/javascript" src="grapheme.js"></script>
 <script type="text/javascript" src="LinearAInscriptions.js"></script>
 <script type="text/javascript" src="word-coordinates-transcriptions.js"></script>
 <script type="text/javascript" src="summerHTMLImageMapCreator.js"></script>
